...
                            </activityIndicatorView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="pYd-t4-Bwl">
                                <rect key="frame" x="10" y="254" width="300" height="60"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="There was a problem to load Twitch top games" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HDD-iB-zUQ">
                                        <rect key="frame" x="0.0" y="0.0" width="300" height="19"/>
                                        <accessibility key="accessibilityConfiguration" identifier="placeholder"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
                                        <color key="textColor" red="0.27116176489999999" green="0.19580209260000001" blue="0.44942098860000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                        <size key="shadowOffset" width="0.0" height="0.0"/>
                                        <variation key="heightClass=regular-widthClass=regular">
                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pYd-t4-Bwl" secondAttribute="trailing" constant="10" id="uBH-Jb-hIe"/>
                            <constraint firstItem="pYd-t4-Bwl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="xkB-rS-bcI"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Wg7-Ta-jjW" secondAttribute="trailing" constant="10" id="z95-WF-ZfR"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Top Games" id="O4t-Uw-hAJ"/>
                    <connections>
                        <outlet property="activityIndicator" destination="Qhd-m4-V9W" id="KSB-f4-LID"/>
                        <outlet property="buttonReload" destination="IeK-1a-Rfc" id="E8f-Q0-UIj"/>
                        <outlet property="collection" destination="X6x-bb-PoN" id="SXu-Zb-nk9"/>
                        <outlet property="labelPlaceholderInfo" destination="HDD-iB-zUQ" id="KKv-N7-yaB"/>
                        <outlet property="searchBar" destination="FUW-fh-fOe" id="xXQ-P4-NMp"/>
...
                            <constraint firstItem="Qvc-O5-AYH" firstAttribute="trailing" secondItem="vzz-RR-t1f" secondAttribute="trailing" id="Wcu-Ec-if7"/>
                            <constraint firstItem="vzz-RR-t1f" firstAttribute="centerY" secondItem="2Fj-pu-t4g" secondAttribute="centerY" id="dX3-Gs-6W9"/>
                            <constraint firstItem="Zrj-Bx-FA0" firstAttribute="height" secondItem="2Fj-pu-t4g" secondAttribute="height" multiplier="0.5" constant="1" id="iVv-3j-brC"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Qvc-O5-AYH"/>
                    </view>
                    <navigationItem key="navigationItem" title="Detail" id="80Q-OH-pmT">
                        <barButtonItem key="rightBarButtonItem" image="star" style="done" id="19d-O6-GQB">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="starButton"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
...
            </objects>
            <point key="canvasLocation" x="868" y="314"/>
        </scene>
        <!--Favorites-->
        <scene sceneID="QIu-Jn-L1l">
            <objects>
                <viewController storyboardIdentifier="FavoritesViewController" title="Favorites" id="XuJ-L8-x0R" customClass="FavoritesViewController" customModule="TwitchTopGames" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Dk8-ds-Q0S">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dzI-8T-mIj">
                                <rect key="frame" x="0.0" y="64" width="320" height="455"/>
...
